Added class names for button styling

--- a/src/App.css
+++ b/src/App.css
@@ -20,3 +20,27 @@
     padding-right: 8%;
     font-size: 5.0rem;
   }
+
+.specials-container {
+
+}
+
+.special-button {
+
+}
+
+.numbers-container {
+
+}
+
+.number-button {
+
+}
+
+.operators-container{
+
+}
+
+.operator-button {
+
+}
